Track rules and add lint/typecheck commands

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ api_keys.yaml
 *.env
 __pycache__/
 .trae/
+!.trae/rules/
+!.trae/rules/11.md
 Concurrent_Edit_history.txt
 Concurrent_Batch_history.txt
 shaobkj_async_history.json
