--- a/mypy.ini
+++ b/mypy.ini
@@ -1,3 +1,8 @@
 [mypy]
 python_version = 3.11
 ignore_missing_imports = True
+explicit_package_bases = True
+namespace_packages = True
+mypy_path = .
+files = .
+disable_error_code = import-untyped
